--- a/src/App.css
+++ b/src/App.css
@@ -39,14 +39,15 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: 'K2D', sans-serif;
 }
 
 .header {
-  background: #F6F3DB;
+  background: #96B896;
 }
 
 h1 {
-  color: #96B896;
+  color: #F6F3DB;
   margin: 0;
   text-align: center;
 }
