--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,14 @@ h1 {
   text-align: center;
 }
 
+h2 {
+  color: #96B896;
+  font-weight: bold;
+  padding: 0;
+  margin: 0;
+  font-size: 1em;
+}
+
 .main {
   width: 100%;
 }
@@ -85,10 +93,38 @@ h1 {
   right: 5px;
 }
 
+#sidebar i:hover {
+  color: rgba(180, 203, 179, 0.836);
+}
+
 #menu {
   margin-top: 50px;
+}
+
+menu {
+  width: 100%;
+  padding: 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+menu a {
+  position: relative;
+  display: inline-block;
+  padding: 0.25em 0.5em;
+  text-decoration: none;
+  color: #FFF;
+  background: #D46565;
+  border-bottom: solid 2px #96B896;
+  border-radius: 4px;
+  box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), 0 2px 2px rgba(0, 0, 0, 0.19);
+  font-weight: bold;
+}
+
+menu a:active {
+  border-bottom: solid 2px #D46565;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
 }
 
 #list {
@@ -97,10 +133,7 @@ h1 {
 }
 
 input {
-  margin-right: 1em;
-  position: absolute;
-  top: 2em;
-  right: 5px;
+  margin-top: 1em;
 }
 
 ul {
