--- a/src/responsive.css
+++ b/src/responsive.css
@@ -2,9 +2,28 @@
 [class*="col-"] {
     width: 100%;
   }
+
+  menu {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  menu a {
+    width: 85%;
+  }
+
   @media only screen and (min-width: 600px) {
     /* For tablets: */
     .col-s-1 {width: 8.33%;}
+
+    menu {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    menu a {
+      width: 25%;
+    }
   
   }
   @media only screen and (min-width: 768px) {
